feature(pagination): implementing MoJ pagination component in image view page
* fix: standardised metadata packet structure and tests

* test: added temporary code to demonstrate visual fix to overlapping

* fix: added readme to explain shared fixtures

* fix: changes suggested by co-pilot code review

* fix: ensure flag is set when render called from new instance

* fix: moved commented code for demo into another branch

* fix: resolved issue with v3.1 openapi schema implementing nullable differently from v3.0

* fix: removed redundant reference and fixed associated test

* fix: ensuring documentId is not in the payload and updates from code review

* fix: moved utils to concept/index.js pattern and fixed related tests
